Fix port in URL

--- a/site-protect.conf.rb.sample
+++ b/site-protect.conf.rb.sample
@@ -1,4 +1,4 @@
-FLUSSONIC_URL = "http://flussonic.my.tld"
+FLUSSONIC_URL = "http://flussonic.my.tld:8080"
 
 FLUSSONIC_USER = "flussonic"
 FLUSSONIC_PASS = "letusin?"
