Protect web.lua with password

--- a/flussoniclua/conf.php.sample
+++ b/flussoniclua/conf.php.sample
@@ -3,4 +3,5 @@ $FLUSSONIC_URL = "http://localhost:8080";
 $FLUSSONIC_USER = "flussonic";
 $FLUSSONIC_PASS = "letmein!";
 $TIMESPAN = 3600;
+$TOKEN_GENERATOR_PASSWORD = "change me!";
 ?>
